--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "chart.js": "^2.9.3",
     "react": "^16.13.0",
+    "react-chartjs-2": "^2.9.0",
     "react-chartkick": "^0.4.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
