ADD link to data source

--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "react-scripts": "3.4.0"
   },
   "scripts": {
+    "fetch": "cd updateData; node index.js; cd ..",
     "start": "react-scripts start",
-    "build": "react-scripts build; mv build docs",
+    "build": "react-scripts build; rm -rf docs; mv build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
